	PR rtl-optimization/20331 	* rtlanal.c (modified_between_p): Check its address first for MEM. 	(modified_in_p): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96282 138bc75d-0d04-0410-961f-82ee72b054a4